<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".ActivityRegBook">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReg"
        android:textSize="35sp"
        android:textColor="@color/white_soft"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idBook"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_id_regbook"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_idBook"
        android:background="@drawable/edit_text_states"
        android:inputType="number"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:autofillHints="username"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameBook"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_book_reg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_nameBook"
        android:background="@drawable/edit_text_states"
        android:inputType="text"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:autofillHints="username"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autorBook"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_autor"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_autor_Book"
        android:background="@drawable/edit_text_states"
        android:inputType="text"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editorial_Book"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_editorial"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_editorial_Book"
        android:background="@drawable/edit_text_states"
        android:inputType="text"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnRegBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="onClick"
        android:text="@string/btnReg"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="regresar"
        android:text="@string/btn_regresar"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>