<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".ActivityRegistrarUser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReg"
        android:textSize="35sp"
        android:textColor="@color/white_soft"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_id_reg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_id"
        android:background="@drawable/edit_text_states"
        android:inputType="number"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:autofillHints="username"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_usuario_reg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_usuario"
        android:background="@drawable/edit_text_states"
        android:inputType="text"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:autofillHints="username"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd_reg"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_pwd_reg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_pwd"
        android:background="@drawable/edit_text_states"
        android:inputType="textPassword"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd_confirm"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtxt_pwd_reg_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_pwd"
        android:background="@drawable/edit_text_states"
        android:inputType="textPassword"
        android:textColor="@color/white_soft"
        android:textSize="20sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="onClick"
        android:text="@string/btnReg"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="regresar"
        android:text="@string/btn_regresar"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>