<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="35sp"
        android:textColor="@color/white_soft"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:id="@+id/btnRegBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:text="@string/btnReg"
        android:textColor="@color/blue"
        android:onClick="registrar"
        android:textSize="35sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnUpdateBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="update"
        android:text="@string/btnUpdBook"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnConsBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:text="@string/btnConsBook"
        android:onClick="consultar"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="regresar"
        android:text="@string/btn_regresar"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" /> |

</LinearLayout>