<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_main"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_rawRes="@raw/library_"
        android:textAlignment="center"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="30dp"
        app:lottie_autoPlay="true"
        app:lottie_repeatCount="@integer/material_motion_duration_long_1"/>

    <EditText
        android:id="@+id/edtxt_usuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_usuario"
        android:textColorHint="@color/white"
        android:background="@drawable/edit_text_states"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:autofillHints="username"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/edtxt_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/edtxt_pwd"
        android:background="@drawable/edit_text_states"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:autofillHints="password"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="onClick"
        android:text="@string/btnIniciar"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_button"
        android:onClick="registrar"
        android:text="@string/btnReg"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>